[package]
name = "finchers-juniper"
version = "0.1.0-alpha.1"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
description = """
Endpoints for supporting Juniper integration
"""
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/finchers-rs/finchers-juniper"
repository = "https://github.com/finchers-rs/finchers-juniper.git"
documentation = "https://docs.rs/finchers-juniper"

build = "build.rs"

[features]
strict = []

[dependencies]
finchers = "0.12.0-alpha.3"

bytes = "0.4.9"
failure = { version = "0.1.2", features = ["derive"] }
futures-preview = { version = "0.3.0-alpha.5", features = ["tokio-compat"] }
http = "0.1.10"
juniper = "0.9.2"
percent-encoding = "1.0.1"
serde = { version = "1.0.75", features = ["derive"] }
serde_json = "1.0.26"
serde_qs = "0.4.1"
tokio = "0.1.8"
tokio-threadpool = "0.1.6"

[build-dependencies]
version_check = "0.1.4"

[dev-dependencies]
log = "0.4.5"
pretty_env_logger = "0.2.4"
juniper = { version = "0.9.2", features = ["expose-test-schema", "serde_json"] }
