[package]
name = "finchers-juniper"
version = "0.1.0-alpha.3"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
description = """
Endpoints for supporting Juniper integration
"""
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/finchers-rs/finchers-juniper"
repository = "https://github.com/finchers-rs/finchers-juniper.git"
documentation = "https://docs.rs/finchers-juniper"

[features]
strict = []

[dependencies]
finchers = "0.12.0-alpha.6"

bytes = "0.4.9"
failure = { version = "0.1.2", features = ["derive"] }
futures = "0.1.24"
http = "0.1.10"
juniper = "0.10.0"
log = "0.4.5"
percent-encoding = "1.0.1"
serde = { version = "1.0.75", features = ["derive"] }
serde_json = "1.0.26"
serde_qs = "0.4.1"
tokio = "0.1.8"
tokio-threadpool = "0.1.6"

[dev-dependencies]
pretty_env_logger = "0.2.4"
juniper = { version = "0.10.0", features = ["expose-test-schema", "serde_json"] }
futures-cpupool = "0.1.8"
