[package]
name = "finchers-juniper"
version = "0.1.0-alpha.3" # remember to update html_root_url
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
description = """
Endpoints for supporting Juniper integration
"""
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/finchers-rs/finchers-juniper.git"
documentation = "https://finchers-rs.github.io/docs"

[package.metadata.docs.rs]
features = [
  # FIXME: remove it as soon as the rustc version used in docs.rs is updated
  "extern-prelude",
]

[features]
strict = []

# FIXME: remove it as soon as the rustc version used in docs.rs is updated
extern-prelude = []

[dependencies]
finchers = "0.12.0-alpha.7"

bytes = "0.4.9"
failure = { version = "0.1.2", features = ["derive"] }
futures = "0.1.24"
http = "0.1.10"
juniper = "0.10.0"
log = "0.4.5"
percent-encoding = "1.0.1"
serde = { version = "1.0.75", features = ["derive"] }
serde_json = "1.0.26"
serde_qs = "0.4.1"
tokio = "0.1.8"
tokio-threadpool = "0.1.6"

[dev-dependencies]
pretty_env_logger = "0.2.4"
juniper = { version = "0.10.0", features = ["expose-test-schema", "serde_json"] }
futures-cpupool = "0.1.8"

[patch.crates-io.finchers]
git = "https://github.com/finchers-rs/finchers.git"
